Isolate MtpApiFileManager class.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -88,6 +88,8 @@
   <script type="text/javascript" src="js/lib/i18n.js"></script>
 
   <script type="text/javascript" src='js/lib_new/MtpApiManager.js'></script>
+  <script type="text/javascript" src='js/lib_new/MtpApiFileManager.js'></script>
+  <script type="text/javascript" src='js/lib_new/MtpSingleInstanceService.js'></script>
   <script type="text/javascript" src="js/lib/mtproto.js"></script>
   <script type="text/javascript" src="js/lib/mtproto_wrapper.js"></script>
 
