--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -48,7 +48,7 @@
   <div id="notify_sound"></div>
 
   <!-- build:js js/app.js -->
-  <script type="text/javascript" src="js/lib/polyfill.js"></script>
+  <script type="text/javascript" src="js/lib_new/polyfill.js"></script>
   <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="js/lib/config.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
@@ -85,7 +85,7 @@
   <script type="text/javascript" src="js/lib/bin_utils.js"></script>
   <script type="text/javascript" src="js/lib/tl_utils.js"></script>
   <script type="text/javascript" src="js/lib/ng_utils.js"></script>
-  <script type="text/javascript" src="js/lib/i18n.js"></script>
+  <script type="text/javascript" src="js/lib_new/i18n.js"></script>
 
   <script type="text/javascript" src='js/lib_new/MtpApiManager.js'></script>
   <script type="text/javascript" src='js/lib_new/MtpApiFileManager.js'></script>
