Renamings and more isolations.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -48,7 +48,7 @@
   <div id="notify_sound"></div>
 
   <!-- build:js js/app.js -->
-  <script type="text/javascript" src="js/lib_new/polyfill.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/polyfill.js"></script>
   <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="js/lib/config.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
@@ -82,14 +82,14 @@
   <script type="text/javascript" src="vendor/recorderjs/recorder.min.js"></script>
 
   <script type="text/javascript" src="js/lib/utils.js"></script>
-  <script type="text/javascript" src="js/lib/bin_utils.js"></script>
-  <script type="text/javascript" src="js/lib/tl_utils.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/bin_utils.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/tl_utils.js"></script>
   <script type="text/javascript" src="js/lib/ng_utils.js"></script>
-  <script type="text/javascript" src="js/lib_new/i18n.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/i18n.js"></script>
 
-  <script type="text/javascript" src='js/lib_new/MtpApiManager.js'></script>
-  <script type="text/javascript" src='js/lib_new/MtpApiFileManager.js'></script>
-  <script type="text/javascript" src='js/lib_new/MtpSingleInstanceService.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpApiManager.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpApiFileManager.js'></script>
+  <script type="text/javascript" src='js/lib/MtpSingleInstanceService.js'></script>
   <script type="text/javascript" src="js/lib/mtproto.js"></script>
   <script type="text/javascript" src="js/lib/mtproto_wrapper.js"></script>
 
