--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -50,7 +50,7 @@
   <!-- build:js js/app.js -->
   <script type="text/javascript" src="js/lib_isolated/polyfill.js"></script>
   <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="js/lib/config.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/config.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/offline_manager.js"></script>
 
