Add more isolations, WIP authorization.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -90,6 +90,12 @@
   <script type="text/javascript" src='js/lib_isolated/MtpApiManager.js'></script>
   <script type="text/javascript" src='js/lib_isolated/MtpApiFileManager.js'></script>
   <script type="text/javascript" src='js/lib/MtpSingleInstanceService.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpDcConfigurator.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpRsaKeysManager.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpSecureRandom.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpTimeManager.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpAuthorizer.js'></script>
+  
   <script type="text/javascript" src="js/lib/mtproto.js"></script>
   <script type="text/javascript" src="js/lib/mtproto_wrapper.js"></script>
 
