Start isolating Networker class.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -95,6 +95,7 @@
   <script type="text/javascript" src='js/lib_isolated/MtpSecureRandom.js'></script>
   <script type="text/javascript" src='js/lib_isolated/MtpTimeManager.js'></script>
   <script type="text/javascript" src='js/lib_isolated/MtpAuthorizer.js'></script>
+  <script type="text/javascript" src='js/lib_isolated/MtpNetworkerFactory.js'></script>
   
   <script type="text/javascript" src="js/lib/mtproto.js"></script>
   <script type="text/javascript" src="js/lib/mtproto_wrapper.js"></script>
