Isolate CryptoWorker, WIP Networker.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -84,6 +84,7 @@
   <script type="text/javascript" src="js/lib/utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/bin_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/tl_utils.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/CryptoWorker.js"></script>
   <script type="text/javascript" src="js/lib/ng_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/i18n.js"></script>
 
