Fixes and more isolations.

--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -85,6 +85,13 @@
   <script type="text/javascript" src="js/lib_isolated/bin_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/tl_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/CryptoWorker.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/qSync.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/Storage.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/WebpManager.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/ServerTimeManager.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/GeoLocationManager.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/MemoryFileStorage.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/ExternalResourcesManager.js"></script>
   <script type="text/javascript" src="js/lib/ng_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/i18n.js"></script>
 
