--- a/lib/webogram/app/index.html
+++ b/lib/webogram/app/index.html
@@ -92,6 +92,7 @@
   <script type="text/javascript" src="js/lib_isolated/GeoLocationManager.js"></script>
   <script type="text/javascript" src="js/lib_isolated/MemoryFileStorage.js"></script>
   <script type="text/javascript" src="js/lib_isolated/ExternalResourcesManager.js"></script>
+  <script type="text/javascript" src="js/lib_isolated/FileManager.js"></script>
   <script type="text/javascript" src="js/lib/ng_utils.js"></script>
   <script type="text/javascript" src="js/lib_isolated/i18n.js"></script>
 
